fix relative paths for linking

--- a/about/index.html
+++ b/about/index.html
@@ -55,7 +55,7 @@
 
 			<div class="center">
 				<p>henryaweikel at gmail dot com</p>
-				<a href="/">(home)</a>
+				<a href="../">(home)</a>
 			</div>
 		</div>
 	</body>
