--- a/climbing/index.html
+++ b/climbing/index.html
@@ -190,7 +190,7 @@
 			<br/>
 
 			<div class="home_link">
-				<a class="white" href="..">(home)</a>
+				<a class="white" href="../">(home)</a>
 			</div>
 	</body>
 </html>
