--- a/climbing/map.html
+++ b/climbing/map.html
@@ -148,6 +148,6 @@
 		<br/>
 
 		<div class="home_link">
-			<a class="white" href="..">(home)</a>
+			<a class="white" href="../">(home)</a>
 		</div>
 	</body>
