--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 				<img src="arch.svg"></img>
 
 				<div class="list">
-					<a href="/about">(about)</a><br/>
-					<a href="/climbing">(climbing)</a><br/>
-					<a href="/bookrecs">(book recs)</a><br/>
-					<a href="/bookcovers">(book covers)</a><br/>
+					<a href="about">(about)</a><br/>
+					<a href="climbing">(climbing)</a><br/>
+					<a href="bookrecs">(book recs)</a><br/>
+					<a href="bookcovers">(book covers)</a><br/>
 				</div>
 			</div>
 		</div>
