responsive sizing index

--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
 				line-height: 24px;
 			}
 
+			@media (max-width: 768px) {
+			.window-beyond {
+				width: 100px;
+				height: 200px;
+				padding: 66px;
+				font-size: 12px;
+			}
+
+			.window-beyond img {
+				width: 80px;
+			}
+
+			.list {
+				margin-top: 16px;
+				line-height: 16px;
+			}
+		}
 		</style>
 	</head>
 	<body>
