--- a/that-shape-had-none/index.html
+++ b/that-shape-had-none/index.html
@@ -184,6 +184,14 @@
 
             body {
                 font-size: 10pt;
+                height: 100vh;
+            }
+
+            @supports (-webkit-touch-callout: none) {
+                body {
+                    /* The hack for Safari */
+                    height: -webkit-fill-available;
+                }
             }
         
             .grid-container {
