safari fix again?

--- a/that-shape-had-none/index.html
+++ b/that-shape-had-none/index.html
@@ -187,8 +187,8 @@
             }
         
             .grid-container {
-                height: 92vh;
-                grid-template-rows: 3% 60% 3% 31% 3%;
+                height: 100dvh;
+                grid-template-rows: 3dvh 60dvh 3dvh 31dvh 3dvh;
                 grid-template-columns: 6vw 88vw 6vw;
             }
 
