safari fix again?

--- a/that-shape-had-none/index.html
+++ b/that-shape-had-none/index.html
@@ -182,14 +182,14 @@
 
         @media (max-width: 768px) {
 
-            body {
-                font-size: 10pt;
+            body, html, .section p, .epigraph, .text {
+                font-size: 14pt;
             }
         
             .grid-container {
                 height: 100dvh;
-                grid-template-rows: 3dvh 60dvh 3dvh 31dvh 3dvh;
-                grid-template-columns: 6vw 88vw 6vw;
+                grid-template-rows: 2dvh 47dvh 2dvh 47dvh 2dvh;
+                grid-template-columns: 4vw 92vw 4vw;
             }
 
             /* MAP CONTENT TO DIFFERENT CELLS FOR MOBILE LAYOUT */
